Fixed nav icon spacing

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -38,12 +38,12 @@
 }
 
 .social {
-  height: 30%;
+  height: 40%;
   background-color: #111111;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  gap: 10px;
-  padding: 25px;
+  gap: 20px;
+  padding: 5px;
 }
